<resources>
    <string name="app_name">DistributorApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="token_identifier">TokenIdentifier</string>

    <!--Home Activity Related-->
    <string name="new_client_tf_title">New Client</string>
    <string name="account_details_tf_title">Account Details</string>
    <string name="log_out">Log out</string>

    <string name="bride_fn_tf_title">Bride First Name</string>
    <string name="bride_ln_tf_title">Bride Last Name</string>
    <string name="groom_fn_tf_title">Groom First Name</string>
    <string name="groom_ln_tf_title">Groom Last Name</string>
    <string name="marriage_date_tf_title">Marriage Date</string>
    <string name="marriage_time_tf_title">Marriage Time</string>
    <string name="marriage_venue">Marriage Address</string>
    <string name="delete_tf_title">Delete</string>

    <!--New Event-->
    <string name="add_new_event">Add New Event</string>
    <string name="new_event_name_tf_title">Event Name</string>
    <string name="new_event_date_tf_title">Event Date</string>
    <string name="new_event_time_tf_title">Event Time</string>
    <string name="event_address_sama_as_marriage_address">Event address Same as Marriage Address</string>
    <string name="event_venue">Event Address</string>
    <string name="event_create_button_title">Create Event</string>
    <string name="event_update_button_title">Update Event</string>
    <string name="event_delete_button_title">Delete Event</string>

    <!--New Contact-->
    <string name="add_bride_contact_details">Add Bride Contact Details</string>
    <string name="add_groom_contact_details">Add Groom Contact Details</string>
    <string name="new_contact_name_tf_title">Name</string>
    <string name="new_contact_phone_tf_title">Phone Number</string>
    <string name="create_contact_button_title">Create Contact</string>
    <string name="contact_update_button_title">Update Contact</string>
    <string name="contact_delete_button_title">Delete Contact</string>

    <!--Admin Email Ids-->
    <string name="add_admin_email_id_button_title">Add</string>
    <string name="add_admin_email_id_tf_title">Admin Email id</string>
    <string name="delete_email_id_button_title">Delete</string>

    <!--Near By Places-->
    <string name="add_near_places_tf_title">Add near tourist place</string>
    <string name="new_place_name_tf_title">Place name</string>
    <string name="distance_from_venue_tf_title">Distance from venue in Kms</string>
    <string name="add_place">Add Place</string>
    <string name="update_place">Update Place</string>
    <string name="delete_place_button_title">Delete Place</string>

    <!--Cropper Related-->
    <string name="main_drawer_load">Load Image for cropping</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>

    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="drawer_option_title">Crop View Presets</string>
    <string name="drawer_option_oval">Circular</string>
    <string name="drawer_option_rect">Rectangular</string>
    <string name="drawer_option_min_max">Min/Max limits override</string>
    <string name="drawer_option_customized_overlay">Customized Overlay</string>
    <string name="drawer_option_scale_center">Scale Center Inside</string>
    <string name="drawer_option_title2">Customization Toggles</string>
    <string name="drawer_option_toggle_scale">Image Scale: %1s</string>
    <string name="drawer_option_toggle_shape">Crop Shape: %1s</string>
    <string name="drawer_option_toggle_guidelines">Guidelines: %1s</string>
    <string name="drawer_option_toggle_aspect_ratio">Aspect Ratio: %1s</string>
    <string name="drawer_option_toggle_auto_zoom">Auto zoom: %1s</string>
    <string name="drawer_option_toggle_max_zoom">Max zoom level: %1s</string>
    <string name="drawer_option_set_initial_crop_rect">Set initial crop rectangle</string>
    <string name="drawer_option_reset_crop_rect">Reset crop rectangle to initial</string>
    <string name="drawer_option_toggle_multitouch">Multitouch: %1s</string>
    <string name="drawer_option_toggle_show_overlay">Show Overlay: %1s</string>
    <string name="drawer_option_toggle_show_progress_bar">Show Progress Bar: %1s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
