<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.shridhar.distributorapp.CreateEvent.CreateEventFragment"
    android:background="#ffffffff"
    android:clickable="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="New Event"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/fragment_main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarHolder"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomEditTextStyle"
                    android:id="@+id/new_event_name_tf"
                    android:hint="@string/new_event_name_tf_title"
                    android:imeActionId="@+id/action_new_event_name" />

            </android.support.design.widget.TextInputLayout>

            <!--Marriage Time-->
            <LinearLayout
                android:id="@+id/marriage_date_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomEditTextStyle"
                        android:id="@+id/new_event_date_tf"
                        android:hint="@string/new_event_date_tf_title"
                        android:imeActionId="@+id/action_new_event_date"
                        android:inputType="none"
                        android:editable="false"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomEditTextStyle"
                        android:id="@+id/new_event_time_tf"
                        android:hint="@string/new_event_time_tf_title"
                        android:imeActionId="@+id/action_new_event_time"
                        android:inputType="none"
                        android:editable="false"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_address_check_box"
                android:text="@string/event_address_sama_as_marriage_address"
                android:checked="true" />

            <!--Event Venue-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomMultipleLitEditTextStyle"
                    android:id="@+id/event_address_tf"
                    android:hint="@string/event_venue"
                    android:imeActionId="@+id/action_event_venue"
                    android:visibility="gone"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_event_button"
                android:text="Create Event"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delete_event_button"
                android:text="@string/event_delete_button_title"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
