<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shridhar.distributorapp.MainActivityFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="New Client">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="New Client"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <Button
                    android:id="@+id/create_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:minWidth="0dp"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentEnd="true"
                    android:text="Create"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    android:textSize="15dp"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/fragment_main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_holder"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin" >

            <!--Bride Name-->
            <LinearLayout
                android:id="@+id/bride_name_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/bride_fn_editText"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bride_fn_tf_title"
                        android:imeActionId="@+id/action_bride_fn" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/bride_ln_editText"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bride_ln_tf_title"
                        android:imeActionId="@+id/action_bride_ln" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!--Groom Name-->
            <LinearLayout
                android:id="@+id/groom_name_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/groom_fn_editText"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/groom_fn_tf_title"
                        android:imeActionId="@+id/action_groom_fn" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/groom_ln_editText"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/groom_ln_tf_title"
                        android:imeActionId="@+id/action_groom_ln" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <!--Images Related-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/fab_margin">

                    <ImageView
                        android:id="@+id/bride_image_view"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:adjustViewBounds="true"
                        android:background="@drawable/circle_shape"
                        android:clickable="true"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_launcher"
                        />
                    <Button
                        android:id="@+id/bride_image_delete_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_tf_title"
                        android:visibility="gone"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/fab_margin">

                    <ImageView
                        android:id="@+id/groom_image_view"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:adjustViewBounds="true"
                        android:background="@drawable/circle_shape"
                        android:clickable="true"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_launcher"
                        />

                    <Button
                        android:id="@+id/groom_image_delete_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_tf_title"
                        android:visibility="gone"/>
                </LinearLayout>

            </LinearLayout>

            <!--Marriage Time-->
            <LinearLayout
                android:id="@+id/marriage_date_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/marriage_date_editText"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/marriage_date_tf_title"
                        android:imeActionId="@+id/action_marriage_date"
                        android:inputType="none"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/marriage_time_editText"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/marriage_time_tf_title"
                        android:imeActionId="@+id/action_marriage_time"
                        android:inputType="none"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!--Venue-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/marriage_venue"
                    style="@style/CustomMultipleLitEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marriage_venue"
                    android:imeActionId="@+id/action_marriage_venue"
                    />

            </android.support.design.widget.TextInputLayout>

            <!--Events-->
            <Button
                android:id="@+id/add_new_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/add_new_event"/>
            <LinearLayout
                android:id="@+id/events_holder_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <!--Bride Contact Details-->
            <Button
                android:id="@+id/add_bride_contact_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/add_bride_contact_details"/>
            <LinearLayout
                android:id="@+id/bride_contact_details_holder_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <!--Groom Contact details-->
            <Button
                android:id="@+id/add_groom_contact_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/add_groom_contact_details"/>
            <LinearLayout
                android:id="@+id/groom_contact_details_holder_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <!--Admin Email Ids-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/admin_email_id_editText"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/add_admin_email_id_tf_title"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/add_admin_email_id_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_admin_email_id_button_title"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/admin_email_ids_holder_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <!--Near by places-->
            <Button
                android:id="@+id/add_near_tourist_place_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/add_near_places_tf_title"/>
            <LinearLayout
                android:id="@+id/near_tourist_places_holder_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
